--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
